Apply fixes to tests to get them running with Java 17