@@ -65,7 +65,6 @@ allprojects { proj ->
     }
 
     tasks.withType(JavaCompile) {
-        //I don't believe those warnings add value given modern IDEs
         options.warnings = false
         options.encoding = 'UTF-8'
     }
@@ -75,11 +74,17 @@ allprojects { proj ->
         options.addStringOption('charSet', 'UTF-8')
         options.setSource('17')
     }
-
     tasks.withType(AbstractArchiveTask) {
         preserveFileTimestamps = false
         reproducibleFileOrder = true
     }
+}
+
+
+tasks.withType(Test).configureEach {
+    // Add JVM args to open modules for Java 17
+    jvmArgs '--add-opens', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED',
+            '--add-opens', 'java.base/java.io=ALL-UNNAMED'
 }
 
 java {
@@ -92,21 +97,20 @@ configurations {
 }
 
 dependencies {
-    implementation libraries.bytebuddy, libraries.bytebuddyagent
+    implementation 'net.bytebuddy:byte-buddy:1.14.12'
+    implementation 'net.bytebuddy:byte-buddy-agent:1.14.12'
+    implementation 'org.mockito:mockito-core:5.2.0'
+    implementation 'junit:junit:4.13.2'
+    implementation 'org.hamcrest:hamcrest:2.2'
+    implementation 'org.opentest4j:opentest4j:1.2.0'
+    implementation 'org.objenesis:objenesis:3.3'
 
-    implementation libraries.junit4, libraries.hamcrest, libraries.opentest4j
-    implementation libraries.objenesis
-
-    testImplementation libraries.asm
-
-    testImplementation libraries.assertj
+    testImplementation 'org.ow2.asm:asm:9.5'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
 
     //putting 'provided' dependencies on test compile and runtime classpath
     testImplementation configurations.compileOnly
     testImplementation configurations.compileOnly
-
-    testImplementation sourceSets.test.output
-
 
     annotationProcessor "com.uber.nullaway:nullaway:0.12.4-SNAPSHOT"
     annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.16-SNAPSHOT"
